# mongan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
mongan_41/: CMakeLists.txt  run_mongan_41.cpp
mongan_41/functions_and_classes_41/: CMakeLists.txt  stack.cpp  stack.h
mongan_41/tests_41/: CMakeLists.txt
mongan_41/tests_41/basic_tests/: CMakeLists.txt  test_mongan_41.cpp
mongan_41/tests_41/lib/googletest/test/: gtest_help_test.py
mongan_42/: CMakeLists.txt
mongan_42/functions_and_classes_42/: CMakeLists.txt  sl_list.cpp  sl_list.h
mongan_42/tests_42/: CMakeLists.txt
mongan_42/tests_42/basic_tests_42/: CMakeLists.txt  test_mongan_42.cpp
mongan_44/: CMakeLists.txt  run_mongan_44.cpp
mongan_44/functions_and_classes_44/: CMakeLists.txt  mth_to_last.h
mongan_44/tests_44/: CMakeLists.txt
mongan_44/tests_44/basic_tests_44/: CMakeLists.txt  test_mongan_44.cpp
mongan_45/: CMakeLists.txt
mongan_45/functions_and_classes_45/: CMakeLists.txt  flatten_list.cpp  flatten_list.h
mongan_45/tests_45/: CMakeLists.txt
mongan_45/tests_45/basic_tests_45/: CMakeLists.txt  test_mongan_45.cpp
mongan_47/: CMakeLists.txt  run_mongan_47.cpp
mongan_47/functions_and_classes_47/: CMakeLists.txt  null_or_cycle.cpp  null_or_cycle.h
mongan_47/tests_47/: CMakeLists.txt
mongan_47/tests_47/basic_tests_47/: CMakeLists.txt  test_mongan_47.cpp
mongan_51/: CMakeLists.txt
mongan_51/functions_and_classes_51/: CMakeLists.txt  tree_height.h
mongan_51/tests_51/: CMakeLists.txt
mongan_51/tests_51/basic_tests_51/: CMakeLists.txt  test_mongan_51.cpp
mongan_52/: CMakeLists.txt
mongan_52/functions_and_classes_52/: CMakeLists.txt  preorder_traversal.h
mongan_52/tests_52/: CMakeLists.txt
mongan_52/tests_52/basic_tests_52/: CMakeLists.txt  test_mongan_52.cpp
mongan_53/: CMakeLists.txt
mongan_53/functions_and_classes_53/: CMakeLists.txt  iterative_preorder_traversal.cpp  iterative_preorder_traversal.h
mongan_53/tests_53/: CMakeLists.txt
mongan_53/tests_53/basic_tests_53/: CMakeLists.txt  test_mongan_53.cpp
mongan_55/: CMakeLists.txt  run_mongan_55.cpp
mongan_55/functions_and_classes_55/: CMakeLists.txt  binary_tree_to_heap.h  first_nonrepeat.h
mongan_55/tests_55/: CMakeLists.txt
mongan_55/tests_55/basic_tests_55/: CMakeLists.txt  test_mongan_55.cpp
mongan_61/: CMakeLists.txt
mongan_61/functions_and_classes_61/: CMakeLists.txt  first_nonrepeat.cpp  first_nonrepeat.h
mongan_61/tests_61/: CMakeLists.txt
mongan_61/tests_61/basic_tests_61/: CMakeLists.txt  test_mongan_61.cpp
mongan_62/: CMakeLists.txt
mongan_62/functions_and_classes_62/: CMakeLists.txt  remove_characters.cpp  remove_characters.h
mongan_62/tests_62/: CMakeLists.txt
mongan_62/tests_62/basic_tests_62/: CMakeLists.txt  test_mongan_62.cpp
mongan_64/: CMakeLists.txt
mongan_64/functions_and_classes_64/: CMakeLists.txt  string_to_int.cpp  string_to_int.h
mongan_64/tests_64/: CMakeLists.txt
mongan_64/tests_64/basic_tests_64/: CMakeLists.txt  test_mongan_64.cpp
mongan_74/: CMakeLists.txt  run_mongan_74.cpp
mongan_74/functions_and_classes_74/: CMakeLists.txt  telephone_words.cpp  telephone_words.h
mongan_74/tests_74/: CMakeLists.txt
mongan_74/tests_74/basic_tests_74/: CMakeLists.txt  test_mongan_74.cpp
mongan_75/: CMakeLists.txt
mongan_75/functions_and_classes_75/: CMakeLists.txt  telephone_words_iterative.cpp  telephone_words_iterative.h
mongan_75/tests_75/: CMakeLists.txt
mongan_75/tests_75/basic_tests_75/: CMakeLists.txt  test_mongan_75.cpp
mongan_92/: CMakeLists.txt  run_mongan_92.cpp
mongan_92/functions_and_classes_92/: CMakeLists.txt  producer_consumer.h
mongan_92/tests_92/: CMakeLists.txt
mongan_92/tests_92/basic_tests_92/: CMakeLists.txt  test_mongan_92.cpp
